tests/paczka1/fuzzy1/64270985.err
Error in line 15: zSOga4L S684 1,7
Error in line 19: rGFxWL57DQ A328 66,8
Error in line 11: A328 A534 50,2
Error in line 20: rGFxWL57DQ S893 22,8
Error in line 17: wCtWhgu A328 58,2
Error in line 25: sYY9G S893 74,2
Error in line 28: sYY9G A328 38,1
Error in line 33: sYY9G S684 23,9
Error in line 21: A328 S893 11,8
Error in line 36: sYY9G A328 61,3
